tests/invalid-chars.c.err
../tests/invalid-chars.c:16:15: error: Invalid character literal
