tests/invalid-chars.c
int main(int i1 = 0, int i2 = 0, int i3 = 0,
         int i4 = 0, int i5 = 0, int i6 = 0,
         int i7 = 0, int i8 = 0, int i9 = 0)
{
    char* foo = "q";
    int xx = 1;
    int32_t q = 0;

    char c1 = '1';
    char c2 = 'a';
    char c3 = '0';
    char c4 = '\0';
    char c5 = '\n';
    char c6 = '\r';
    char c7 = '\000';
    char c8 = '\ThisIsTooLong';

    long; long; long; long; long; long; long; long; long; long;
    long; long; long; long; long; long; long; long; long; long;
    long; long; long; long; long; long; long; long; long; long;

    return q;
}
